fix: run workflows on nightly branch

--- a/.github/workflows/nova-dev.yaml
+++ b/.github/workflows/nova-dev.yaml
@@ -1,9 +1,10 @@
 ---
-name: "[nova] Typecheck, Lint and Format"
+name: "Nova SDK: Typecheck, Lint and Format"
 on:
   pull_request:
     branches:
       - main
+      - nightly
 jobs:
   test:
     runs-on: ubuntu-latest
