--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -1,5 +1,5 @@
 ---
-name: "[nova-rerun-bridge] Docker Build Rerun"
+name: "nova-rerun-bridge: Docker Build Rerun"
 on:
   workflow_run:
     workflows:
