--- a/.github/workflows/nova-release.yaml
+++ b/.github/workflows/nova-release.yaml
@@ -1,29 +1,25 @@
 ---
-name: "Release package"
+name: "Nova SDK: Release package"
 on:
   push:
     branches:
       - main
+      - 'release/**'          # release/1.x, release/customer-foo, …
 jobs:
   release:
     runs-on: ubuntu-latest
-    # allow parallel releases from different branches
-    concurrency: release-${{ github.ref_name }}
+    concurrency: release-${{ github.ref_name }}   # isolate queues per branch
     permissions:
       id-token: write
       contents: write
     steps:
-      # Note: we need to checkout the repository at the workflow sha in case during the workflow
-      # the branch was updated. To keep PSR working with the configured release branches,
-      # we force a checkout of the desired release branch but at the workflow sha HEAD.
-      - name: Setup | Checkout Repository at workflow sha
+      - name: Checkout repository at workflow SHA
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.sha }}
-      - name: Setup | Force correct release branch on workflow sha
-        run: |
-          git checkout -B ${{ github.ref_name }} ${{ github.sha }}
+      - name: Force correct branch at workflow SHA
+        run: git checkout -B ${{ github.ref_name }} ${{ github.sha }}
       - uses: cschleiden/replace-tokens@v1.3
         env:
           NOVA_AUTH0_DOMAIN: ${{ secrets.NOVA_AUTH0_DOMAIN }}
@@ -31,7 +27,7 @@ jobs:
           NOVA_AUTH0_AUDIENCE: ${{ secrets.NOVA_AUTH0_AUDIENCE }}
         with:
           files: '["nova/auth/auth_config.py"]'
-      - name: Action | Semantic Version Release
+      - name: Semantic Version Release
         id: release
         uses: python-semantic-release/python-semantic-release@v9.20.0
         with:
@@ -39,14 +35,16 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_committer_name: "github-actions"
           git_committer_email: "actions@users.noreply.github.com"
-      - name: Publish package distributions to PyPI
+      - name: Publish to PyPI
+        if: |
+          steps.release.outputs.released == 'true' &&
+          (github.ref_name == 'main' || startsWith(github.ref_name, 'release/'))
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_TOKEN }}
+      - name: Upload wheel to GitHub Release assets
         if: steps.release.outputs.released == 'true'
-      - name: Publish | Upload to GitHub Release Assets
         uses: python-semantic-release/publish-action@v9.21.0
-        if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.release.outputs.tag }}
