--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,10 +129,11 @@ match = "(main|master)"
 prerelease_token = "rc"
 prerelease = false
 
-[tool.semantic_release.branches.nightly]
-match = "nightly"
-prerelease = true
-prerelease_token = "dev"   # produces v1.2.3-dev20250606
+
+[tool.semantic_release.branches."release/.*"]
+match = "release/.*"
+prerelease = false
+tag_format = "v{version}-release-{branch_slug}"
 
 [tool.semantic_release.changelog]
 changelog_file = "CHANGELOG.md"
