--- a/.github/workflows/nova-release.yaml
+++ b/.github/workflows/nova-release.yaml
@@ -28,23 +28,48 @@ jobs:
         with:
           files: '["nova/auth/auth_config.py"]'
       - name: Semantic Version Release
-        id: release
+        id: semrel
+        if: github.ref_name == 'main'
         uses: python-semantic-release/python-semantic-release@v9.20.0
         with:
           build: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_committer_name: "github-actions"
           git_committer_email: "actions@users.noreply.github.com"
-      - name: Publish to PyPI
+      - name: Build wheel & bump post-build number (release/*)
+        if: startsWith(github.ref_name, 'release/')
+        id: build
+        run: |
+          # commits since divergence from main  → monotonically-increasing build #
+          BASE_POINT=$(git merge-base origin/main HEAD || git rev-list --max-parents=0 HEAD)
+          BUILD_NUM=$(git rev-list --count ${BASE_POINT}..HEAD)
+
+          # slugify branch name  (release/1.x → 1.x → 1.x ; slash → -, dots ok)
+          BRANCH_SLUG=$(echo "${GITHUB_REF_NAME#release/}" | tr '/' '-')
+          BASE_VER=$(grep -m1 '^version' pyproject.toml | cut -d'"' -f2)
+          NEW_VER="${BASE_VER}.b{BUILD_NUM}+${BRANCH_SLUG}"
+
+          echo "Building ${NEW_VER} for release branch ${BRANCH_SLUG}"
+
+          # patch version locally (no commit)
+          sed -i -E 's/^(version = ")[^"]+(")$/\1'"${NEW_VER}"'\2/' pyproject.toml
+
+          python -m pip install --upgrade build
+          python -m build --wheel --outdir dist
+
+          # wheel filename already contains NEW_VER, so no extra rename needed
+          WHEEL=$(ls dist/*.whl)
+          echo "wheel=$WHEEL" >> "$GITHUB_OUTPUT"
+      - name: Publish package to PyPI
         if: |
-          steps.release.outputs.released == 'true' &&
-          (github.ref_name == 'main' || startsWith(github.ref_name, 'release/'))
+          (github.ref_name == 'main'  && steps.semrel.outputs.released == 'true') ||
+          (startsWith(github.ref_name, 'release/'))
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_TOKEN }}
       - name: Upload wheel to GitHub Release assets
-        if: steps.release.outputs.released == 'true'
+        if: steps.semrel.outputs.released == 'true'
         uses: python-semantic-release/publish-action@v9.21.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.release.outputs.tag }}
+          tag: ${{ steps.semrel.outputs.tag }}
