--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,19 +2,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Debug Tests",
-      "type": "python",
-      "request": "launch",
-      "program": "${workspaceFolder}/.venv/bin/pytest",
-      "args": ["tests", "--maxfail=1", "--disable-warnings"],
-      "console": "integratedTerminal",
-      "justMyCode": false,
-      "envFile": "${workspaceFolder}/.env",
-      "env": {
-        "PYTHONPATH": "${workspaceFolder}"
-      }
-    },
-    {
       "name": "Python: Current File",
       "type": "debugpy",
       "request": "launch",
@@ -23,7 +10,8 @@
       "envFile": "${workspaceFolder}/.env",
       "env": {
         "PYTHONPATH": "${workspaceFolder}"
-      }
+      },
+      "justMyCode": false
     }
   ]
 }
