feat(NDX-42)!: first migration steps

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,12 @@
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
+      "justMyCode": false,
       "envFile": "${workspaceFolder}/.env",
       "env": {
         "PYTHONPATH": "${workspaceFolder}"
-      },
-      "justMyCode": false
+      }
     }
+
   ]
 }
