--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ authors = [
     { name = "Stefan Wagner", email = "stefan.wagner@wandelbots.com" },
     { name = "André Kühnert", email = "andre.kuhnert@wandelbots.com" },
 ]
-requires-python = "~=3.10"
+requires-python = "~=3.11"
 readme = "README.md"
 dependencies = [
     "httpx>=0.28.0,<0.29",
-    "wandelbots_api_client==25.5.0",
+    "wandelbots_api_client~=25.5",
     "websockets>=14.1.0,<15",
     "loguru>=0.7.2,<0.8",
     "pydantic>=2.11.4,<3",
@@ -61,6 +61,9 @@ dev = [
     "ipython<9",
     "freezegun>=1.5.1",
 ]
+
+[tool.uv]
+prerelease = "allow"
 
 [tool.hatch.build.targets.sdist]
 include = [
