--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ benchmark = [
     "trimesh>=4.5.3",
     "pyyaml>5.3",
 ]
-nova_app_template = [
+novax = [
     "uvicorn[standard]>=0.20.0,<0.21.0",
     "dependency-injector>=4.42.0,<5.0.0",
 ]
@@ -79,14 +79,14 @@ include = [
     "nova",
     "nova_rerun_bridge",
     "wandelscript",
-    "nova_app_template",
+    "novax",
 ]
 
 [tool.hatch.build.targets.wheel]
 include = [
     "nova",
     "nova_rerun_bridge",
-    "nova_app_template",
+    "novax",
     "wandelscript",
 ]
 
