--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ benchmark = [
 novax = [
     "uvicorn[standard]>=0.20.0,<0.21.0",
     "dependency-injector>=4.42.0,<5.0.0",
+    "fastapi>=0.115.13",
 ]
 
 [project.scripts]
