--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -82,7 +82,7 @@ jobs:
       - name: Set up Python environment
         run: |
           pip install uv
-          uv sync --extra "nova-rerun-bridge"
+          uv sync --extra "nova-rerun-bridge" --extra "wandelscript"
       - name: Decode output secrets
         uses: cloudposse/github-action-secret-outputs@main
         id: role
@@ -155,7 +155,7 @@ jobs:
           secret: ${{ secrets.GPG_PASSWORD }}
           op: decode
           in: ${{ needs.setup-instance.outputs.PORTAL_PROD_ACCESS_TOKEN }}
-      - name: Cleanup – Delete instance
+      - name: Cleanup - Delete instance
         run: ./scripts/delete_nova_instance.sh
         env:
           PORTAL_PROD_INSTANCE_ID: ${{ needs.setup-instance.outputs.PORTAL_PROD_INSTANCE_ID }}
