--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -68,6 +68,8 @@ jobs:
             run_cmd: "python examples/04_selection_motion_group_activation.py"
           - id: 05_multi_step_movement_with_collision_free
             run_cmd: "python examples/05_multi_step_movement_with_collision_free.py"
+          - id: 07_run_wandelscript_file
+            run_cmd: "python examples/07_run_wandelscript_file.py"
           - id: 14_welding_example
             run_cmd: "python nova_rerun_bridge/examples/14_welding_example.py"
     steps:
@@ -80,7 +82,7 @@ jobs:
       - name: Set up Python environment
         run: |
           pip install uv
-          uv sync --extra "nova-rerun-bridge"
+          uv sync --extra "nova-rerun-bridge" --extra "wandelscript"
       - name: Decode output secrets
         uses: cloudposse/github-action-secret-outputs@main
         id: role
@@ -153,7 +155,7 @@ jobs:
           secret: ${{ secrets.GPG_PASSWORD }}
           op: decode
           in: ${{ needs.setup-instance.outputs.PORTAL_PROD_ACCESS_TOKEN }}
-      - name: Cleanup – Delete instance
+      - name: Cleanup - Delete instance
         run: ./scripts/delete_nova_instance.sh
         env:
           PORTAL_PROD_INSTANCE_ID: ${{ needs.setup-instance.outputs.PORTAL_PROD_INSTANCE_ID }}
