--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -58,18 +58,18 @@ jobs:
           - id: integration
             run_cmd: "pytest -rs -v -m integration"
           # each example gets its own matrix entry
-          - id: 01_basic
-            run_cmd: "python examples/01_basic.py"
-          - id: 02_plan_and_execute
-            run_cmd: "python examples/02_plan_and_execute.py"
-          - id: 03_move_multiple_robots
-            run_cmd: "python examples/03_move_multiple_robots.py"
-          - id: 04_selection_motion_group_activation
-            run_cmd: "python examples/04_selection_motion_group_activation.py"
-          - id: 05_multi_step_movement_with_collision_free
-            run_cmd: "python examples/05_multi_step_movement_with_collision_free.py"
-          - id: 07_run_wandelscript_file
-            run_cmd: "python examples/07_run_wandelscript_file.py"
+          - id: basic
+            run_cmd: "python examples/basic.py"
+          - id: plan_and_execute
+            run_cmd: "python examples/plan_and_execute.py"
+          - id: move_multiple_robots
+            run_cmd: "python examples/move_multiple_robots.py"
+          - id: selection_motion_group_activation
+            run_cmd: "python examples/selection_motion_group_activation.py"
+          - id: multi_step_movement_with_collision_free
+            run_cmd: "python examples/multi_step_movement_with_collision_free.py"
+          - id: run_wandelscript_file
+            run_cmd: "python examples/run_wandelscript_file.py"
           - id: 14_welding_example
             run_cmd: "python nova_rerun_bridge/examples/14_welding_example.py"
     steps:
