--- a/.github/workflows/push_nova_rerun_bridge_image.yaml
+++ b/.github/workflows/push_nova_rerun_bridge_image.yaml
@@ -3,7 +3,7 @@ name: "nova-rerun-bridge: Docker Build Nova Rerun Bridge"
 on:
   workflow_run:
     workflows:
-      - \[nova\] Release
+      - "Nova SDK: Release package"
     types:
       - completed
     branches:
