--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -3,7 +3,7 @@ name: "nova-rerun-bridge: Docker Build Rerun"
 on:
   workflow_run:
     workflows:
-      - \[nova\] Release
+      - "Nova SDK: Release package"
     types:
       - completed
     branches:
