--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,11 @@ wandelscript = [
     "geometricalgebra>=0.1.3,<0.2",
     "typer[all]>=0.12,<0.16",
 ]
+novax = [
+    "fastapi>=0.115.6",
+    "uvicorn>=0.34.0",
+    "python-decouple>=3.8",
+]
 benchmark = [
     "rerun-sdk==0.23.3",
     "requests>=2.32.3",
@@ -101,6 +106,7 @@ junit_family = "xunit2"
 norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
 testpaths = """
     nova
+    novax
     tests
 """
 markers = """
@@ -117,7 +123,7 @@ show_error_context = true
 warn_unused_ignores = true
 strict_equality = true
 mypy_path = ".mypy_stubs"
-files = "nova, examples, tests, wandelscript"
+files = "nova, examples, tests, wandelscript, novax"
 exclude = ["wandelscript/grammar", "wandelscript/motions.py", "wandelscript/builtins/fs.py", "wandelscript/metamodel.py"]
 namespace_packages = true
 explicit_package_bases = true
