--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ nova-rerun-bridge = [
 wandelscript = [
     "aiostream>=0.6.1,<0.7",
     "antlr4-python3-runtime==4.13.1",
+    "dotenv",
     "geometricalgebra>=0.1.3,<0.2",
     "typer[all]>=0.12,<0.16",
 ]
@@ -74,6 +75,8 @@ benchmark = [
 
 [project.scripts]
 download-models = "nova_rerun_bridge.helper_scripts.download_models:update_robot_models"
+wandelscript = "wandelscript.cli:app"
+ws = "wandelscript.cli:app"
 
 [tool.hatch.build.targets.sdist]
 include = [
