--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,14 @@ nova-rerun-bridge = [
 wandelscript = [
     "aiostream>=0.6.1,<0.7",
     "antlr4-python3-runtime==4.13.1",
+    "dotenv",
     "geometricalgebra>=0.1.3,<0.2",
     "typer[all]>=0.12,<0.16",
+]
+novax = [
+    "fastapi>=0.115.6",
+    "uvicorn>=0.34.0",
+    "python-decouple>=3.8",
 ]
 benchmark = [
     "rerun-sdk==0.23.3",
@@ -69,12 +75,15 @@ benchmark = [
 
 [project.scripts]
 download-models = "nova_rerun_bridge.helper_scripts.download_models:update_robot_models"
+wandelscript = "wandelscript.cli:app"
+ws = "wandelscript.cli:app"
 
 [tool.hatch.build.targets.sdist]
 include = [
     "nova",
     "nova_rerun_bridge",
     "wandelscript",
+    "novax",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -82,6 +91,7 @@ include = [
     "nova",
     "nova_rerun_bridge",
     "wandelscript",
+    "novax",
 ]
 
 [build-system]
@@ -117,7 +127,7 @@ show_error_context = true
 warn_unused_ignores = true
 strict_equality = true
 mypy_path = ".mypy_stubs"
-files = "nova, examples, tests, wandelscript"
+files = "nova, examples, tests, wandelscript, novax"
 exclude = ["wandelscript/grammar", "wandelscript/motions.py", "wandelscript/builtins/fs.py", "wandelscript/metamodel.py"]
 namespace_packages = true
 explicit_package_bases = true
