--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     { name = "Stefan Wagner", email = "stefan.wagner@wandelbots.com" },
     { name = "André Kühnert", email = "andre.kuhnert@wandelbots.com" },
 ]
-requires-python = "~=3.10"
+requires-python = ">=3.10, <3.13"
 readme = "README.md"
 dependencies = [
     "httpx>=0.28.0,<0.29",
