feat: provide nova to program & update novax API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "freezegun>=1.5.1",
     "pyinstrument>=5.0.2",
     "glom>=24.11.0",
+    "uvicorn>=0.35.0",
 ]
 
 [project.optional-dependencies]
