--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ requires-python = ">=3.10, <3.13"
 readme = "README.md"
 dependencies = [
     "httpx>=0.28.0,<0.29",
-    "wandelbots_api_client~=25.6",
-    "websockets>=14.1.0,<15",
+    "wandelbots-api-client~=25.5",
+    "websockets~=15.0",
     "loguru>=0.7.2,<0.8",
     "pydantic>=2.11.4,<3",
     "python-decouple~=3.8",
@@ -107,7 +107,7 @@ markers = """
 """
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.11"
 ignore_missing_imports = true
 warn_unreachable = true
 warn_unused_configs = true
