--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ wandelscript = [
     "dotenv",
     "geometricalgebra>=0.1.3,<0.2",
     "typer[all]>=0.12,<0.17",
+    "numpy>=1.1.19",
 ]
 novax = [
     "fastapi>=0.115.6",
@@ -111,6 +112,7 @@ junit_family = "xunit2"
 norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
 testpaths = """
     nova
+    wandelscript
     tests
 """
 markers = """
