--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,9 @@
 {
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
+  "python.testing.pytestArgs": ["tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
-  "python.testing.cwd": "${workspaceFolder}",
   "python.envFile": "${workspaceFolder}/.env",
-  "testing.openTesting": "neverOpen",
-  "testing.alwaysRevealTestOnStateChange": true,
   "[python]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "charliermarsh.ruff",
@@ -29,6 +23,5 @@
     "statusBar.debuggingBackground": "#7C21D7",
     "statusBar.noFolderBackground": "#7C21D7",
     "statussBar.prominentBackground": "#7C21D7"
-  },
-  "testing.automaticallyOpenTestResults": "neverOpen"
+  }
 }
