WIP working forward stepping

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.0",
   "configurations": [
+  
     {
       "name": "Python: Debug Tests",
       "type": "python",
@@ -19,6 +20,17 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      }
+    },
+    {
+      "name": "Python: Debug Trajectory Cursor",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/examples/trajectory_cursor.py",
       "console": "integratedTerminal",
       "envFile": "${workspaceFolder}/.env",
       "env": {
