--- a/vscode-ext/tsconfig.json
+++ b/vscode-ext/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
-    "module": "Node16",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "target": "ES2022",
     "lib": ["ES2022"],
     "types": ["vscode", "node", "mocha"],
     "sourceMap": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "rootDir": "src",
-    "strict": true /* enable all strict type-checking options */
-    /* Additional Checks */
-    // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-    // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-    // "noUnusedParameters": true,  /* Report errors on unused parameters. */
+    "strict": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["app"]
