--- a/vscode-ext/tsconfig.json
+++ b/vscode-ext/tsconfig.json
@@ -2,15 +2,16 @@
   "compilerOptions": {
     "module": "CommonJS",
     "moduleResolution": "node",
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "ES2021",
+    "lib": ["ES2021", "DOM"],
     "types": ["vscode", "node", "mocha"],
     "sourceMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "rootDir": "src",
+    "outDir": "out",
     "strict": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["app"]
+  "exclude": ["node_modules", "out"]
 }
