--- a/vscode-ext/.vscodeignore
+++ b/vscode-ext/.vscodeignore
@@ -1,11 +1,13 @@
 .vscode/**
 .vscode-test/**
+out/**
+node_modules/**
 src/**
 .gitignore
 .yarnrc
-webpack.config.js
+esbuild.js
 vsc-extension-quickstart.md
-**/tsconfig.jsonce
+**/tsconfig.json
 **/eslint.config.mjs
 **/*.map
 **/*.ts
