--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -2,10 +2,8 @@
   "name": "wandelbots-nova",
   "displayName": "Wandelbots NOVA",
   "description": "Wandelbots NOVA VSCode Extension",
-  "version": "0.0.2",
-  "packageManager": "pnpm@10.15.0",
+  "version": "0.0.1",
   "publisher": "wandelbots",
-  "type": "module",
   "engines": {
     "vscode": "^1.99.0"
   },
@@ -17,10 +15,9 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished",
-    "onLanguage:python"
+    "onStartupFinished"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
@@ -139,19 +136,21 @@
     }
   },
   "scripts": {
-    "build": "tsc -p .",
-    "vscode:prepublish": "tsc -p .",
-    "package": "vsce package",
+    "vscode:prepublish": "npm run package",
+    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "package:vscode": "npm run package && npx vsce package",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test",
-    "test:watch": "tsc -p . -w --outDir out",
-    "test:compile": "tsc -p . --outDir out",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write . --fix"
+    "test": "vscode-test"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.99.0",
@@ -159,14 +158,14 @@
     "@typescript-eslint/parser": "^8.39.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
-    "@vscode/vsce": "^3.0.0",
+    "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
-    "mocha": "^11.7.1",
-    "prettier": "^3.6.2",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@wandelbots/nova-js": "3.0.0-pr.bugfix-compatible-with-non-dom-envs.115.75370e7",
-    "ws": "^8.18.3"
+    "@wandelbots/nova-api": "^25.7.0",
+    "axios": "^1.11.0",
+    "url-join": "^5.0.0"
   }
 }
