--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -107,6 +107,11 @@
           "default": "",
           "description": "Your Wandelbots NOVA access token for API authentication"
         },
+        "wandelbots-nova-viewer.cell": {
+          "type": "string",
+          "default": "cell",
+          "description": "The Wandelbots NOVA cell to use"
+        },
         "wandelbots-nova-viewer.showDebugInfo": {
           "type": "boolean",
           "default": false,
@@ -148,9 +153,12 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.99.0",
@@ -161,6 +169,7 @@
     "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
