--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -148,14 +148,15 @@
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
     "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "package:vscode": "npm run package && npx vsce package",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "pretest": "npm run test:compile && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:compile": "tsc -p . --outDir out",
+    "test:watch": "tsc -p . -w --outDir out",
+    "test:unit": "vitest run --project unit"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -170,7 +171,8 @@
     "eslint": "^9.32.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@wandelbots/nova-api": "^25.7.0",
