--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -151,6 +151,7 @@
     "pretest": "npm run test:compile && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "test": "vscode-test",
