--- a/.github/workflows/vscode-ext.yaml
+++ b/.github/workflows/vscode-ext.yaml
@@ -21,6 +21,8 @@ jobs:
         run: npm run format
       - name: Lint
         run: npm run lint
+      - name: Typecheck
+        run: npm run typecheck
       - name: Unit tests
         run: npm run test:unit
       - name: Build
