--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -149,7 +149,7 @@
     "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "package:vscode": "npm run package && npx vsce package",
     "pretest": "npm run test:compile && npm run compile && npm run lint",
-    "check-types": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --check .",
