--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -142,11 +142,11 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "compile": "npm run typecheck && npm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "package": "npm run typecheck && npm run lint && node esbuild.js --production",
     "package:vscode": "npm run package && npx vsce package",
     "pretest": "npm run test:compile && npm run compile && npm run lint",
     "typecheck": "tsc --noEmit",
