--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -2,8 +2,8 @@
   "name": "wandelbots-nova",
   "displayName": "Wandelbots NOVA",
   "description": "Wandelbots NOVA VSCode Extension",
-  "version": "0.0.1",
-  "packageManager": "pnpm@10.12.2",
+  "version": "0.1.0",
+  "publisher": "wandelbots",
   "engines": {
     "vscode": "^1.99.0"
   },
@@ -64,6 +64,11 @@
       {
         "command": "wandelbots-nova.showApp",
         "title": "Wandelbots NOVA: Show app"
+      },
+      {
+        "command": "wandelbots-nova.readRobotPose",
+        "title": "Wandelbots NOVA: Read robot pose",
+        "icon": "$(location)"
       }
     ],
     "languages": [
@@ -97,6 +102,16 @@
           "default": "",
           "description": "Your Wandelbots NOVA API URL (e.g. 'uqserrrn.instance.wandelbots.io')"
         },
+        "wandelbots-nova-viewer.accessToken": {
+          "type": "string",
+          "default": "",
+          "description": "Your Wandelbots NOVA access token for API authentication"
+        },
+        "wandelbots-nova-viewer.cellId": {
+          "type": "string",
+          "default": "cell",
+          "description": "The Wandelbots NOVA cell to use"
+        },
         "wandelbots-nova-viewer.showDebugInfo": {
           "type": "boolean",
           "default": false,
@@ -126,16 +141,23 @@
     }
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "watch": "webpack --watch",
-    "vscode:prepublish": "webpack --mode production",
-    "package": "vsce package",
+    "vscode:prepublish": "npm run package",
+    "compile": "npm run typecheck && npm run lint && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "package": "npm run typecheck && npm run lint && node esbuild.js --production",
+    "package:vscode": "npm run package && npx vsce package",
+    "pretest": "npm run test:compile && npm run compile && npm run lint",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test",
-    "test:watch": "tsc -p . -w --outDir out",
-    "test:compile": "tsc -p . --outDir out",
+    "lint:fix": "eslint src --fix",
     "format": "prettier --check .",
-    "format:fix": "prettier --write . --fix"
+    "format:fix": "prettier --write .",
+    "test": "vscode-test",
+    "test:compile": "tsc -p . --outDir out",
+    "test:watch": "tsc -p . -w --outDir out",
+    "test:unit": "vitest run --project unit"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -146,13 +168,16 @@
     "@typescript-eslint/parser": "^8.39.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
-    "@vscode/vsce": "^3.0.0",
+    "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
-    "mocha": "^11.7.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
-    "ts-loader": "^9.5.2",
     "typescript": "^5.9.2",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1"
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@wandelbots/nova-api": "^25.7.0",
+    "axios": "^1.11.0",
+    "url-join": "^5.0.0"
   }
 }
