--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -57,6 +57,9 @@ jobs:
           # single entry for the whole integration‑test batch
           - id: integration
             run_cmd: "pytest -rs -v -m integration"
+          # run novax API integration tests (not marked with 'integration')
+          - id: novax_api_program_tests
+            run_cmd: "pytest -rs -v tests/novax/api/test_program_run.py tests/novax/api/test_program_cycle.py"
           # each example gets its own matrix entry
           - id: basic
             run_cmd: "python examples/basic.py"
@@ -94,6 +97,8 @@ jobs:
         env:
           NOVA_API: ${{ needs.setup-instance.outputs.PORTAL_PROD_HOST }}
           NOVA_ACCESS_TOKEN: ${{ steps.role.outputs.out }}
+          # used for publishing nats data
+          CELL_NAME: cell
         run: |
           echo "DEBUG: decoded token length = ${#NOVA_ACCESS_TOKEN}"
           [[ -z "${NOVA_ACCESS_TOKEN}" ]] && {
