--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "freezegun>=1.5.5",
     "pyinstrument>=5.1.1",
     "glom>=24.11.0",
+    "pytest-xdist>=3.8.0",
 ]
 
 [project.optional-dependencies]
@@ -100,6 +101,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
+asyncio_mode = "auto"
 log_cli = false
 log_cli_level = "DEBUG"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
@@ -117,6 +119,7 @@ testpaths = """
 """
 markers = """
     integration: mark a test as requiring a running Nova instance
+    xdist_group(name): group tests that needs to run sequentially
 """
 
 [tool.mypy]
