added trajectory tuning button

--- a/vscode-ext/tsconfig.json
+++ b/vscode-ext/tsconfig.json
@@ -5,11 +5,12 @@
     "lib": ["ES2022"],
     "sourceMap": true,
     "rootDir": "src",
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
-  "exclude": ["vitest.config.ts", "./src/**/*.unit.test.ts"]
+  "exclude": ["vitest.config.ts", "./src/**/*.unit.test.ts", "app"]
 }
