--- a/vscode-ext/app/package.json
+++ b/vscode-ext/app/package.json
@@ -17,6 +17,7 @@
     "@wandelbots/wandelbots-js-react-components": "^2.35.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
+    "nats": "^2.29.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
