--- a/vscode-ext/app/package.json
+++ b/vscode-ext/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@nats-io/nats-core": "^3.1.0",
     "@react-three/drei": "^10.7.4",
     "@wandelbots/nova-js": "^3.0.0",
     "@wandelbots/wandelbots-js-react-components": "^2.35.0",
