--- a/nats.conf
+++ b/nats.conf
@@ -4,6 +4,5 @@ websocket {
   # for local dev
   port: 9222
   no_tls: true
-  # allow your dev app origins (Vite defaults to 5173)
-  allowed_origins: ["http://localhost:5173", "http://127.0.0.1:5173"]
+  same_origin: false
 }
