--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -147,11 +147,12 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "npm run typecheck && npm run lint && node esbuild.js",
+    "compile:app": "cd ./app && npm run build",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run typecheck && npm run lint && node esbuild.js --production",
-    "package:vscode": "npm run package && npx vsce package",
+    "package": "npm run typecheck && npm run lint && npm run compile:app && node esbuild.js --production",
+    "package:vscode": "npx vsce package",
     "pretest": "npm run test:compile && npm run compile && npm run lint",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
